--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   this should be expanded upon or rewritten entirely.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+permalink: pretty
+
 #twitter_username: jekyllrb
 github_username: nextgen-coop
 
