Fixed permalinks, main pages all working

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ collections:
   services:
     output: true
   locations:
+    permalink: /areas-served/:name
     output: true
 
 # Build settings
