--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Medley Serves & Investigations
 
 description: >- # this means to ignore newlines until "baseurl:"
-  Fix-All is your one stop shop for everything home repair. HVAC, plumbing,
-  electrical and structure repair are a few of the services we offer. Obviously
-  this should be expanded upon or rewritten entirely.
+  Medley Serves & Investigations is a full-service process service office using the most current and state of the art technology for all of your process service needs.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
